working require() in react-hot-loader for example purposes

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>webpack 4 quickstart</title>
+    <link rel="stylesheet" href="https://www.herokucdn.com/purple3/latest/purple3.min.css">
 </head>
 
 <body>
